# xsd-cxx-fusion

./: .gitignore  CMakeLists.txt  TODOs.org  conanfile.txt  shiporder.xsd
include/: type-to-string.hpp  type_to_string.hpp
tests/: test_main.cpp  test_shiporder.cpp
xsd/: shiporder.cpp  shiporder.h
